deployment-blue.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-blue
    version: blue
  name: nginx-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-blue
      version: blue
  template:
    metadata:
      labels:
        app: nginx-blue
        version: blue
    spec:
      containers:
      - image: nginx:1.10 # Edit this for your reponame
        #imagePullPolicy: Never
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: nginx-blue
        #restartPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: html-volume
        # Use either ConfigMap or PersistentVolume
        configMap:
          name: nginx-blue-configmap
          items:
          - key: index.html
            path: index.html
            # persistentVolumeClaim:
            #   claimName: html-pvc
      - name: nginx-config
        configMap:
          name: nginx-blue-configmap
          items:
          - key: bluegreen.conf
            path: default.conf
