deployment-green.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-green
    version: green
  name: nginx-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-green
      version: green
  template:
    metadata:
      labels:
        app: nginx-green
        version: green
    spec:
      containers:
      - image: nginx:1.11 # Edit this for your reponame
        #imagePullPolicy: Never
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        name: nginx-green
        #restartPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: html-volume
        # Use either ConfigMap or PersistentVolume
        configMap:
          name: nginx-green-configmap
          items:
          - key: index.html
            path: index.html
            # persistentVolumeClaim:
            #   claimName: html-pvc
      - name: nginx-config
        configMap:
          name: nginx-green-configmap
          items:
          - key: bluegreen.conf
            path: default.conf
