service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-nginx
    version: blue
  name: my-nginx-blue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-blue
    version: blue
  type: ClusterIP
