service-green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-nginx
    version: green
  name: my-nginx-green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-green
    version: green
  type: ClusterIP
