echo-nginx-ingress.yaml
#
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md#canary
# https://www.huydinh.me/blog/canary-deployment-a-b-testing-ingress-nginx-kubernetes
#
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-production-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/canary: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: echo.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echo-production
            port:
              number: 80

---

# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary-Tag"
    nginx.ingress.kubernetes.io/canary-by-header-value: "new-release"
spec:
  ingressClassName: nginx
  rules:
  - host: echo.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echo-canary
            port:
              number: 80


---

# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-canary-header-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary-Tag"
    nginx.ingress.kubernetes.io/canary-by-header-value: "v2"
spec:
  ingressClassName: nginx
  rules:
  - host: echo.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echo-canary-green
            port:
              number: 80
